fix: SonarCloud issues.